# rules_dejagnu

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  release.yaml  release_prep.sh
dejagnu/: BUILD  defs.bzl  extension.bzl  providers.bzl
dejagnu/internal/: BUILD  dejagnu_runtest_wrapper.tpl  repository.bzl  toolchain_info.bzl  toolchain_repository.bzl  toolchain_type.bzl  versions.bzl
dejagnu/rules/: BUILD  dejagnu.bzl  dejagnu_library.bzl
docs/: BUILD  rules.md
testsuite/: BUILD  MODULE.bazel  lib.exp  lib_test.exp  simple.exp
