"""Bazel rules for running DejaGNU test suites."""

module(
    name = "rules_dejagnu",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)

dejagnu = use_extension("//dejagnu:extension.bzl", "dejagnu")
dejagnu.toolchain(version = "1.6.3")
use_repo(dejagnu, "dejagnu")

register_toolchains("@dejagnu//:toolchain")
